# pathfinder

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  LICENSING.md  Makefile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pyrightconfig.json  requirements.txt  sonar-project.properties
.github/workflows/: main.yaml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-foundation-security/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-core-domain/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-integrations/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/03.1-unified-sidebar-navigation/: 03.1-01-PLAN.md  03.1-01-SUMMARY.md  03.1-02-PLAN.md  03.1-02-SUMMARY.md  03.1-03-PLAN.md  03.1-03-SUMMARY.md  03.1-CONTEXT.md  03.1-RESEARCH.md
.planning/phases/04-blueprints/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
blueprints/python-helloworld/: Containerfile  README.md  ssp-template.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment-scheduler.yaml  deployment-worker.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
core/: admin.py  apps.py  ci_manifest.py  ci_steps.py  consumers.py  context_processors.py  converters.py  decorators.py  encryption.py  forms.py  git_utils.py  middleware.py  models.py  permissions.py  routing.py  tasks.py  urls.py  utils.py  validators.py
core/forms/: __init__.py  base.py  ci_workflows.py  services.py  templates.py
core/migrations/: 0001_initial.py  0002_project_environment_projectmembership.py  0003_integrationconnection.py  0004_environmentconnection_projectconnection.py  0005_add_site_configuration_and_pending_status.py  0006_blueprint_blueprintversion.py  0007_blueprint_deploy_plugins.py  0008_slug_url_refactor.py  0009_add_service_model.py  0010_remove_blueprints_and_service_fks.py  0011_ciworkflow_stepsrepository_cistep_ciworkflowstep_and_more.py  0012_alter_group_external_id_alter_user_external_id.py  0013_ciworkflow_status_service_ci_manifest_pr_url_and_more.py  0014_cistep_engine_stepsrepository_engine.py  0015_ciworkflow_dev_workflow.py  0016_add_not_required_scaffold_status.py  0017_build.py  0018_add_service_webhook_registered.py  0019_add_build_failed_step_fields.py  0020_add_workflow_name_to_build.py  0021_ci_workflow_version.py  0022_rename_manifest_status_out_of_sync_add_pending_pr.py  0023_cistep_file_path_cistep_last_change_type_cistep_slug_and_more.py  0024_remove_cistep_directory_name_unique_together.py  0025_add_engine_and_archived_to_ciworkflow.py  0026_rename_github_run_id_build_ci_run_id_and_more.py  0027_stepsrepository_last_scanned_sha_and_more.py  0028_service_auto_update_patch_and_more.py  0029_apitoken.py  0030_service_ci_variables_error_and_more.py  0031_ciworkflow_runtime_constraints_and_more.py  0032_cistep_outputs_schema.py  0033_service_templates.py  0034_ciworkflowstep_step_commit_sha.py  0035_api_token_key_prefix.py  0036_add_service_endpoint.py  0037_setup_completed_flag.py
core/models/: __init__.py  auth.py  ci.py  config.py  connections.py  projects.py  services.py  steps.py  templates.py
core/tasks/: __init__.py  builds.py  ci_setup.py  health.py  scaffolding.py  scanning.py  templates.py  versions.py
core/templatetags/: audit_tags.py  core_filters.py  json_filters.py
core/tests/: test_ci_manifest.py  test_env_vars.py  test_tasks.py
core/views/: __init__.py  api.py  audit.py  auth.py  blueprints.py  ci_workflows.py  connections.py  dashboard.py  env_vars.py  groups.py  placeholders.py  projects.py  services.py  settings.py  setup.py  templates.py  users.py  webhooks.py
devssp/: asgi.py  settings.py  urls.py  wsgi.py
docs/: 1-design.md  blueprints.md  builds-manifest-identifier.md  ci-workflows.md  code-quality-tools.md  deployments.md  env-vars.md  environments.md  integrations.md  logging.md  projects.md  rbac.md  roadmap.md  services.md  wizard.md
docs/archive/: blueprints.md  builds-manifest-identifier.old.md  ci-workflows.old.md
docs/ci-workflows/: README.md  REMEDIATION.md  build-authorization.md  build-lifecycle.md  logging.md  plugin-interface.md  state.md  step-outputs.md  steps-catalog.md  versioning.md  workflow-definition.md
docs/deployments/: README.md  deployment-lifecycle.md  deployment-methods.md  environment-binding.md  logging.md  plugin-interface.md  promotion.md
docs/security/: README.md  provenance.md  rbac.md  review.md  secrets.md
docs/templates/: README.md  design.md  examples.md  manifest-schema.md  scaffolding.md  template-registration.md  variable-lifecycle.md
pathfinder/: asgi.py  settings.py  urls.py  wsgi.py
plugins/: __init__.py  base.py
plugins/docker/: __init__.py  forms.py  plugin.py  urls.py  views.py
plugins/github/: __init__.py  forms.py  plugin.py  urls.py  views.py  webhooks.py
scripts/: run-dev.sh
tests/: conftest.py
tests/core/: test_ci_manifest.py  test_connection_config.py  test_project_availability.py  test_service_permissions.py  test_setup_unlock.py
theme/static_src/: copy-vendor.js  package-lock.json  package.json  tailwind.config.js
theme/templates/: base.html
(+430 files in other folders)
