[project]
name = "pathfinder"
version = "0.1.0"
description = "Developer Self-Service Portal"
requires-python = ">=3.13"
dependencies = [
    # Django core
    "asgiref==3.11.0",
    "Django==6.0.1",
    "django-auditlog==3.4.1",
    "django-htmx>=1.21.0",
    "django-tailwind==4.4.2",
    "pytailwindcss==0.3.0",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "sqlparse==0.5.5",
    # Phase 3: External Integrations
    "cryptography>=44.0.0",
    "PyGithub>=2.5.0",
    "docker>=7.1.0",
    "django-tasks[database]>=0.4.0",
    "django-formtools>=2.5.0",
    # Phase 4: Blueprints
    "semver>=3.0.0",
    "GitPython>=3.1.0",
    "PyYAML>=6.0.0",
    # Phase 5: Services
    "Jinja2>=3.1.0",
    # Deployment
    "gunicorn>=23.0.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.9.0",
    "django-upgrade>=1.23.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120
extend-exclude = ["theme/static/js/vendor"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "DJ",    # flake8-django
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line length handled by formatter
    "RUF012",  # mutable class attrs - false positive on Django Meta/model fields
]

[tool.ruff.lint.isort]
known-first-party = ["pathfinder"]
