[project]
name = "pathfinder"
version = "0.1.0"
description = "Developer Self-Service Portal"
requires-python = ">=3.13"
dependencies = [
    # Django core
    "asgiref==3.11.0",
    "Django==6.0.1",
    "django-auditlog==3.4.1",
    "django-htmx>=1.27.0",
    "django-tailwind==4.4.2",
    "pytailwindcss==0.3.0",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "sqlparse==0.5.5",
    # Phase 3: External Integrations
    "cryptography>=46.0.5",
    "PyGithub>=2.8.1",
    "docker>=7.1.0",
    "django-tasks>=0.11.0,<0.12",
    "django-scheduled-tasks>=0.2.17",
    "django-formtools>=2.5.1",
    # Phase 4: Blueprints
    "semver>=3.0.4",
    "GitPython>=3.1.46",
    "PyYAML>=6.0.3",
    # Phase 5: Services
    "Jinja2>=3.1.6",
    # Deployment
    "gunicorn>=25.1.0",
    "uvicorn[standard]>=0.41.0",
    "python-dotenv>=1.2.1",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.2",
    "django-upgrade>=1.29.1",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "import-linter>=2.10",
]

[tool.ruff]
target-version = "py313"
line-length = 120
extend-exclude = ["theme/static/js/vendor"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "DJ",    # flake8-django
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line length handled by formatter
    "RUF012",  # mutable class attrs - false positive on Django Meta/model fields
]

[tool.ruff.lint.isort]
known-first-party = ["pathfinder"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "pathfinder.settings"
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.importlinter]
root_packages = ["core", "plugins", "pathfinder", "theme"]

[[tool.importlinter.contracts]]
name = "Core must not import from plugin implementations"
type = "forbidden"
source_modules = ["core"]
forbidden_modules = ["plugins.github", "plugins.docker"]

[[tool.importlinter.contracts]]
name = "Plugin implementations are independent"
type = "independence"
modules = ["plugins.github", "plugins.docker"]

[[tool.importlinter.contracts]]
name = "Theme must not import from core or plugins"
type = "forbidden"
source_modules = ["theme"]
forbidden_modules = ["core", "plugins"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # allow assert in non-test code (Django checks use it)
