[project]
name = "pathfinder"
version = "0.1.0"
description = "Developer Self-Service Portal"
license = "AGPL-3.0-or-later"
requires-python = ">=3.13"
dependencies = [
    # Django core
    "asgiref==3.11.0",
    "Django==6.0.1",
    "django-auditlog==3.4.1",
    "django-htmx>=1.27.0",
    "django-tailwind==4.4.2",
    "pytailwindcss==0.3.0",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "sqlparse==0.5.5",
    # Phase 3: External Integrations
    "cryptography>=46.0.5",
    "PyGithub>=2.8.1",
    "docker>=7.1.0",
    "django-tasks>=0.11.0,<0.12",
    "django-scheduled-tasks>=0.2.17",
    "django-formtools>=2.5.1",
    # Phase 4: Blueprints
    "semver>=3.0.4",
    "GitPython>=3.1.46",
    "PyYAML>=6.0.3",
    # Phase 5: Services
    "Jinja2>=3.1.6",
    # Deployment
    "gunicorn>=25.1.0",
    "uvicorn[standard]>=0.41.0",
    "python-dotenv>=1.2.1",
    "whitenoise>=6.11.0",
    "channels==4.3.2",
    # PostgreSQL (used in Kubernetes/Helm deployments)
    "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.2",
    "django-upgrade>=1.29.1",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "import-linter>=2.10",
    "mypy>=1.19.1",
    "django-stubs>=6.0.1",
    "types-requests>=2.32.4.20260107",
]

[tool.ruff]
target-version = "py313"
line-length = 120
extend-exclude = ["theme/static/js/vendor"]

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins (shadow built-in names)
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DJ",    # flake8-django
    "DTZ",   # flake8-datetimez (naive datetime)
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "G",     # flake8-logging-format
    "I",     # isort
    "PERF",  # perflint (performance anti-patterns)
    "PIE",   # flake8-pie (misc unnecessary code)
    "RSE",   # flake8-raise (unnecessary parens)
    "RUF",   # ruff-specific rules
    "SIM",   # flake8-simplify
    "T20",   # flake8-print (no print() in production)
    "TCH",   # flake8-type-checking
    "UP",    # pyupgrade
    "W",     # pycodestyle warnings
]
ignore = [
    "E501",  # line length handled by formatter
    "RUF012",  # mutable class attrs - false positive on Django Meta/model fields
    "PERF401", # manual list comprehension - noisy on multi-line dict appends
]

[tool.ruff.lint.isort]
known-first-party = ["pathfinder"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "pathfinder.settings"
python_files = ["test_*.py"]
pythonpath = ["."]
testpaths = ["tests", "core/tests", "plugins"]

[tool.importlinter]
root_packages = ["core", "plugins", "pathfinder", "theme"]

[[tool.importlinter.contracts]]
name = "Core must not import from plugin implementations"
type = "forbidden"
source_modules = ["core"]
forbidden_modules = ["plugins.github", "plugins.docker"]

[[tool.importlinter.contracts]]
name = "Plugin implementations are independent"
type = "independence"
modules = ["plugins.github", "plugins.docker"]

[[tool.importlinter.contracts]]
name = "Theme must not import from core or plugins"
type = "forbidden"
source_modules = ["theme"]
forbidden_modules = ["core", "plugins"]

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
strict = false
warn_return_any = false           # too noisy with untyped libraries (PyGithub, etc.)
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = false     # gradual adoption — tighten later
exclude = ["theme/static/js/vendor", "tests"]

# Libraries without py.typed / stubs
[[tool.mypy.overrides]]
module = [
    "auditlog.*",
    "django_scheduled_tasks.*",
    "formtools.*",
    "channels.*",
    "docker.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "pathfinder.settings"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # allow assert in non-test code (Django checks use it)
